--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -1,96 +1,451 @@
 @import url("https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600&display=swap");
 
-/* Global Styles */
+/*=============== VARIABLES CSS ===============*/
+:root {
+  --header-height: 3.5rem;
+
+  /*========== Colors ==========*/
+  /*Color mode HSL(hue, saturation, lightness)*/
+  --first-color: hsl(230, 75%, 56%);
+  --title-color: hsl(230, 75%, 15%);
+  --text-color: hsl(230, 12%, 40%);
+  --body-color: hsl(230, 16%, 72%);
+  --container-color: hsl(230, 100%, 97%);
+  --border-color: hsl(230, 25%, 80%);
+
+  /*========== Font and typography ==========*/
+  /*.5rem = 8px | 1rem = 16px ...*/
+  --body-font: "Syne", sans-serif;
+  --h2-font-size: 1.25rem;
+  --normal-font-size: .938rem;
+
+  /*========== Font weight ==========*/
+  --font-regular: 400;
+  --font-medium: 500;
+  --font-semi-bold: 600;
+
+  /*========== z index ==========*/
+  --z-fixed: 100;
+  --z-modal: 1000;
+}
+
+/*========== Responsive typography ==========*/
+@media screen and (min-width: 1023px) {
+  :root {
+    --h2-font-size: 1.5rem;
+    --normal-font-size: 1rem;
+  }
+}
+
+/*=============== BASE ===============*/
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+body,
+input,
+button {
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
 }
 
 body {
-    font-family: "Syne", sans-serif;
-    background-color: #f8f9fa;
-    color: #333;
+  background-color: var(--body-color);
+  color: var(--text-color);
 }
 
+input,
+button {
+  border: none;
+  outline: none;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 20px;
+  max-width: 1120px;
+  margin-inline: 1.5rem;
 }
 
-header {
-    background-color: hsl(230, 16%, 72%);
-    color: #fff;
-    padding: 10px 0;
+.main {
+  position: relative;
+  height: 100vh;
 }
 
-header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.main__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  z-index: -1;
+}
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--body-color);
+  box-shadow: 0 2px 16px hsla(230, 75%, 32%, .15);
+  z-index: var(--z-fixed);
 }
 
-nav ul {
-    list-style: none;
-    display: flex;
+.nav {
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-nav ul li {
-    margin-right: 20px;
+.nav__logo {
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+  transition: color .4s;
 }
 
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
+.nav__actions {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
 }
 
-.section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 40px 0;
+.nav__search, 
+.nav__login, 
+.nav__toggle, 
+.nav__close {
+  font-size: 1.25rem;
+  color: var(--title-color);
+  cursor: pointer;
+  transition: color .4s;
 }
 
-.section .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+:is(.nav__logo, .nav__search, .nav__login, .nav__toggle, .nav__link):hover {
+  color: var(--first-color);
 }
 
-.section h2 {
-    margin-bottom: 20px;
-    color: #333;
+/* Navigation for mobile devices */
+@media screen and (max-width: 1023px) {
+  .nav__menu {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    background-color: var(--body-color);
+    box-shadow: 0 8px 16px hsla(230, 75%, 32%, .15);
+    width: 100%;
+    padding-block: 4.5rem 4rem;
+    transition: top .4s;
+  }
 }
 
-.section p {
-    margin-bottom: 20px;
+.nav__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 2.5rem;
+  text-align: center;
 }
 
-.section .btn {
-    padding: 10px 20px;
-    background-color: hsl(230, 75%, 56%);
-    color: #fff;
-    text-decoration: none;
-    border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+.nav__link {
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+  transition: color .4s;
 }
 
-.section .btn:hover {
-    background-color: hsl(230, 75%, 40%);
+.nav__close {
+  position: absolute;
+  top: 1.15rem;
+  right: 1.5rem;
 }
-.image {
-  max-width: 40%; /* Adjust the maximum width of the image container as needed */
-  margin: 0 auto; /* Center the image container horizontally */
-  /* Add additional styling as needed */
+
+/* Show menu */
+.show-menu {
+  top: 0;
 }
-.image img {
-  max-width: 100%; /* Ensure the image does not exceed its container's width */
-  height: auto; /* Maintain the aspect ratio of the image */
-  display: block; /* Ensure the image behaves as a block element */
-  margin: 0 auto; /* Center the image horizontally */
-  /* Add additional styling as needed */
+@media screen and (min-width: 1023px) {
+  .nav {
+    height: calc(var(--header-height) + 2rem);
+    column-gap: 3rem;
+  }
+  .nav__close, 
+  .nav__toggle {
+    display: none;
+  }
+  .nav__menu {
+    margin-left: auto;
+  }
+  .nav__list {
+    flex-direction: row;
+    column-gap: 3rem;
+  }
+
+  .login__form {
+    padding: 3rem 2rem 3.5rem;
+  }
+}
+
+@media screen and (min-width: 1150px) {
+  .container {
+    margin-inline: auto;
+  }
+}
+@import "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
+body{
+	margin: 0;
+	padding: 0;
+	font-family: "Syne", sans-serif;
+  background-color:whitesmoke;
+  color: black;
+	background-size: cover;
+  padding-top: 120px;
+}
+
+
+
+.login-box{
+	
+	width:30%;
+
+	position:absolute;
+	left:35%;
+	color: black;
+}
+
+
+#sml{
+  width: 20%;
+  margin-left:4%;
+}
+
+#csl{
+  width: 9%;
+  margin-right:4%;
+  float: right;
+}
+
+#inh3 {
+  background-color: rgba(75,156,56,0.8);
+  padding-top: 5px;
+  
+}
+
+.imgslide {
+  float: left;
+  margin-left:3%;
+  width: 57%
+}
+
+#test {
+ width: 100%;
+  background-color: #4caf50;
+  border: 2px solid #4caf50;
+  color: black;
+  padding: 5px;
+  font-size: 18px;
+  cursor: black;
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+}
+
+
+.login-box h2{
+  float:left;
+  font-size:40px;
+  border-bottom: 5px solid #4caf50;
+  margin-bottom: 20px;
+  padding:20px 0
+}
+.textbox{
+  width:100%;
+  overflow: hidden;
+  font-size: 20px;
+  padding: 8px 0;
+  margin: 8px 0;
+  border-bottom: 2px solid #4caf50;
+
+}
+
+
+#tablepart {
+  margin-top: 400%;
+  margin-bottom: 50px;
+  background-color: rgba(220,220,220,0.8);
+  text-align: center; 
+  display: inline-block;
+  width: 50%;
+}
+
+#tablec {
+  text-align: center;
+}
+
+.text i{
+  width:28px;
+  float: left;
+  text-align: center;
+}
+.textbox input{
+  border: none;
+  outline: none;
+  background: none;
+  color: black;
+  font-size: 18px;
+  width: 140%;
+  float: left;
+  margin: 0 10px;
+}
+.btn{
+  width: 100%;
+  background-color: rgba(75,156,56,0.5);
+  border: 2px solid rgba(75,156,56,0.3);
+  color: black;
+  padding: 5px;
+  font-size: 18px;
+  cursor: black;
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+}
+
+.btn:hover {
+  background-color: rgba(75,156,56,0.7);
+  border: 2px solid rgba(75,156,56,0.5);
+}
+
+@media screen and (min-width: 800px) {
+  #tablepart {
+  margin-top: 70%;
+}
+}
+
+@media screen and (min-width: 400px) {
+  #tablepart {
+  margin-top: 150%;
+}
+}
+
+@media screen and (min-width: 1300px) {
+  #tablepart {
+  margin-top: 50%;
+}
+}
+
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 8px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  background-color: rgba(0,0,0,0.6);
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.4);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.5s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 0.5s;
+  animation-name: fade;
+  animation-duration: 0.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: 0.7} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: 0.7} 
+  to {opacity: 1}
 }
