--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -81,8 +81,9 @@ img {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-  max-width: 1120px;
-  margin-inline: 1.5rem;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .main {
@@ -105,9 +106,17 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: var(--body-color);
+  background-color: hsl(230, 16%, 72%);
+  color: #fff;
+  padding: 10px 0;
   box-shadow: 0 2px 16px hsla(230, 75%, 32%, .15);
   z-index: var(--z-fixed);
+}
+
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav {
@@ -116,7 +125,20 @@ img {
   justify-content: space-between;
   align-items: center;
 }
+nav ul {
+  list-style: none;
+  display: flex;
+}
 
+nav ul li {
+  margin-right: 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
 .nav__logo {
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
@@ -129,40 +151,10 @@ img {
   column-gap: 1rem;
 }
 
-.nav__search, 
-.nav__login, 
-.nav__toggle, 
-.nav__close {
-  font-size: 1.25rem;
-  color: var(--title-color);
-  cursor: pointer;
-  transition: color .4s;
-}
 
-:is(.nav__logo, .nav__search, .nav__login, .nav__toggle, .nav__link):hover {
-  color: var(--first-color);
-}
 
-/* Navigation for mobile devices */
-@media screen and (max-width: 1023px) {
-  .nav__menu {
-    position: fixed;
-    top: -100%;
-    left: 0;
-    background-color: var(--body-color);
-    box-shadow: 0 8px 16px hsla(230, 75%, 32%, .15);
-    width: 100%;
-    padding-block: 4.5rem 4rem;
-    transition: top .4s;
-  }
-}
 
-.nav__list {
-  display: flex;
-  flex-direction: column;
-  row-gap: 2.5rem;
-  text-align: center;
-}
+
 
 .nav__link {
   color: var(--title-color);
